[gd_scene load_steps=10 format=2]

[ext_resource path="res://settings.gd" type="Script" id=1]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://pexels-anugrah-lohiya.jpg" type="Texture" id=3]
[ext_resource path="res://fonts/Sora/Sora-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://splash.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 59
font_data = ExtResource( 4 )

[node name="splash" type="Node2D"]
script = ExtResource( 1 )

[node name="high" type="Button" parent="."]
margin_left = 511.0
margin_top = 318.0
margin_right = 797.0
margin_bottom = 430.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/font = SubResource( 1 )
text = "High Graphics"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 1661.45
margin_top = 904.511
margin_right = 1859.45
margin_bottom = 983.511
hint_tooltip = "Back to Main Scene"
custom_fonts/font = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="medium" type="Button" parent="."]
margin_left = 509.0
margin_top = 487.0
margin_right = 801.0
margin_bottom = 585.0
custom_fonts/font = SubResource( 2 )
text = "Low  Graphics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screenres" type="Button" parent="."]
margin_left = 509.0
margin_top = 631.0
margin_right = 803.0
margin_bottom = 757.0
custom_fonts/font = ExtResource( 2 )
text = "Screen Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="version" type="Label" parent="."]
margin_left = 1712.0
margin_top = 1025.0
margin_right = 1872.0
margin_bottom = 1054.0
custom_fonts/font = ExtResource( 2 )
text = "Version : 1.3 alpha"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info_text" type="Label" parent="."]
margin_left = 1044.96
margin_top = 304.412
margin_right = 1722.96
margin_bottom = 521.412
custom_fonts/font = SubResource( 3 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pexels-anugrah-lohiya" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.407843 )
position = Vector2( 943.517, 545 )
scale = Vector2( 0.392055, 0.394369 )
z_index = -1
texture = ExtResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 789.921
margin_top = 34.8432
margin_right = 1133.92
margin_bottom = 189.843
custom_fonts/font = SubResource( 4 )
text = "Settings
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 511.218, 157.418 )
stream = ExtResource( 5 )
volume_db = 15.0
autoplay = true
[connection signal="mouse_entered" from="high" to="." method="_on_high_mouse_entered"]
[connection signal="mouse_exited" from="high" to="." method="_on_high_mouse_exited"]
[connection signal="pressed" from="high" to="." method="_on_single_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="medium" to="." method="_on_medium_mouse_entered"]
[connection signal="mouse_exited" from="medium" to="." method="_on_medium_mouse_exited"]
[connection signal="pressed" from="medium" to="." method="_on_multi_pressed"]
[connection signal="mouse_entered" from="screenres" to="." method="_on_screenres_mouse_entered"]
[connection signal="mouse_exited" from="screenres" to="." method="_on_screenres_mouse_exited"]
